Fix : footer overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1131,7 +1131,8 @@ body.active { overflow: hidden; }
   #FOOTER
 \*-----------------------------------*/
 
-
+.footer {overflow: hidden;
+}
 
 .footer-top {
   position: relative;
